--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
               <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExajhjN3QyaDlhcTYxdXpwZmxucDgzbTkzcmhudGpsNGxlc3Zsb3NmZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/FREyuwdIyYLFlJ8C6b/giphy.gif" alt="Excited gif" class="rounded-lg w-full max-w-xs mx-auto" />
             `;
 
+            await sleep(2000);
             const formattedDate = formatCustomDate(dateTime);
             const message = `See you on ${formattedDate} 🍦`;
 
